Fix image scale editor and legend alignment  (#618)
* Fix image scale editor

* Fix strings

--- a/sass/components/canvas/attribute_editor.scss
+++ b/sass/components/canvas/attribute_editor.scss
@@ -878,6 +878,7 @@
           background: none;
           font-size: 14px;
 
+          margin-right: 5px;
           @include font-mono;
 
           height: $line-height;
@@ -1042,7 +1043,6 @@
         display: flex;
         flex-direction: row;
         width: 100%;
-        cursor: pointer;
         border-radius: 2px;
         line-height: $line-height;
         overflow: hidden;
@@ -1087,8 +1087,6 @@
         }
 
         &:hover {
-          background: $color-primary;
-
           .el-image {
             border: 1px solid $color-primary-dark;
           }
@@ -1103,7 +1101,14 @@
           width: 100%;
           border: 1px solid $color-active;
           padding-left: 4px;
+          padding-top: 4px;
           background: lighten($color-active, 30%);
+          height: 26px;
+          
+          &-attrubutes {
+            @extend .el-drag-over;
+            width: auto;
+          }
         }
       }
 
